--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="index.css">
+    <script src="https://kit.fontawesome.com/3eaa937947.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -23,7 +24,7 @@
                 <h3 class="banner-subtitle">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary1">Download CV</button>
+                <button class="btn-primary1"><i class="fa-solid fa-download"></i> Download</button>
             </div>
             <img class="hardy" src="images/hardy.png" alt="">
         </div>
@@ -130,7 +131,7 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-primary2">Download CV</button>
+                <button class="btn-primary2"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <section class="contact">
